fix for host taking up too much space on posts

--- a/frontend/src/components/post/Post.module.css
+++ b/frontend/src/components/post/Post.module.css
@@ -45,7 +45,8 @@
 
 .postSubInfo {
     display: flex;
-    justify-content: space-around;
+    gap: 10px;
+    flex-direction: column;
 }
 
 .postSubInfoItem {
